<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingHorizontal="30dp"
    android:paddingVertical="15dp"
    android:background="@color/white"

    tools:context=".activities.LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="150dp"

        android:layout_height="150dp"
        android:backgroundTint="#F2FDF6"
        app:cardCornerRadius="100dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:cardCornerRadius="15dp"

            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"

                app:srcCompat="@drawable/reciclaya" />

        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView9"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/gotham_bold"
        android:text="@string/Bienvenido"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginTop="5dp"
        android:fontFamily="@font/gothamnarrow_medium"
        android:gravity="center"
        android:text="@string/MensajeBienvenida"
        android:textColor="@color/gris"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/gotham_medium"

            android:text="@string/CorreoElectronico"
            android:textColor="@color/gris"
            android:textSize="14sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gris_claro"

                android:paddingHorizontal="15dp"
                >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"

                    android:layout_gravity="center_vertical"
                    android:background="@drawable/correo"
                    android:backgroundTint="@color/gris"
                    android:scaleType="fitCenter" />

                <EditText
                    android:id="@+id/ETEmailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"

                    android:background="@color/transparente"
                    android:ems="10"
                    android:paddingVertical="15dp"

                    android:fontFamily="@font/gothamnarrow_medium"
                    android:hint="@string/CorreoEjemplo"
                    android:inputType="textEmailAddress"

                    android:textColor="@color/black"
                    android:textColorHint="@color/gris"

                    android:textSize="14sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"

                android:fontFamily="@font/gotham_medium"

                android:text="@string/Contrasena"
                android:textColor="@color/gris"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/TVOlvidoContrasenaLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:fontFamily="@font/gotham_medium"

                android:gravity="end"

                android:text="@string/OlvidoContrasena"
                android:textColor="@color/verde"
                android:textSize="12sp" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gris_claro"

                android:paddingHorizontal="15dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"

                    android:layout_gravity="center_vertical"
                    android:background="@drawable/candado"
                    android:backgroundTint="@color/gris"
                    android:scaleType="fitCenter" />

                <EditText
                    android:id="@+id/ETPasswordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"

                    android:background="@color/transparente"
                    android:ems="10"

                    android:paddingVertical="15dp"
                    android:fontFamily="@font/gothamnarrow_medium"
                    android:hint="@string/ContrasenaEjemplo"
                    android:inputType="textPassword"

                    android:textColor="@color/black"
                    android:textColorHint="@color/gris"

                    android:textSize="14sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <Button
        android:id="@+id/BtnIniciarSesionLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/IniciarSesion"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textAllCaps="false"

        android:background="@drawable/green_button_background"

        android:layout_marginTop="20dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        />

    <TextView
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"

        android:fontFamily="@font/gothamnarrow_medium"
        android:gravity="center"
        android:text="@string/AunNoCuenta"
        android:textColor="@color/gris"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/TVRegistroLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/TVRegistroLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/gotham_medium"

        android:text="@string/RegistrateAqui"
        android:textColor="@color/verde"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>