<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.fragment_register_select">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/Unete"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:fontFamily="@font/gotham_bold"

        android:layout_marginTop="20dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/MensajeUnete"
        android:textColor="@color/gris"
        android:textSize="14sp"
        android:fontFamily="@font/gothamnarrow_medium"

        android:layout_marginTop="5dp"

        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/gothamnarrow_medium"
        android:text="@string/CualRol"
        android:textColor="@color/gris"
        android:textSize="13sp"

        android:layout_marginTop="30dp"

        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintLeft_toLeftOf="parent"
    />

    <FrameLayout
        android:id="@+id/FLPersonaRS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="1dp"

        android:layout_marginTop="15dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        >

        <FrameLayout
            android:id="@+id/FLPersonaSeleccionRS"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>

        <LinearLayout
            android:id="@+id/LLPersonaRS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/linearlayout_transparente"
            android:orientation="horizontal"
            android:padding="15dp"
            >

            <ImageView
                android:id="@+id/IVPersonaRS"
                android:layout_width="60dp"
                android:layout_height="60dp"

                android:background="@drawable/persona_no_seleccionada" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="15dp"
                android:layout_weight="1"

                android:orientation="vertical">

                <TextView
                    android:id="@+id/TVPersonaRS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:fontFamily="@font/gotham_bold"
                    android:text="@string/PersonaRecicla"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:fontFamily="@font/gothamnarrow_medium"
                    android:text="@string/MensajePersona"
                    android:textColor="@color/gris"
                    android:textSize="13sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/IVPersonaSeleccionRS"
                android:layout_width="20dp"
                android:layout_height="20dp"

                android:background="@drawable/no_seleccionado" />

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/FLReciladorRS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="1dp"

        android:layout_marginTop="15dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/FLPersonaRS"
        >

        <FrameLayout
            android:id="@+id/FLRecicladorSeleccionRS"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </FrameLayout>

        <LinearLayout
            android:id="@+id/LLRecicladorRS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/linearlayout_transparente"
            android:orientation="horizontal"
            android:padding="15dp"
            >

            <ImageView
                android:id="@+id/IVRecicladorRS"
                android:layout_width="60dp"
                android:layout_height="60dp"

                android:background="@drawable/reciclador_no_seleccionado" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="15dp"

                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TVRecicladorRS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:fontFamily="@font/gotham_bold"
                    android:text="@string/RecicladorLocal"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"

                    android:fontFamily="@font/gothamnarrow_medium"
                    android:text="@string/MensajeReciclador"
                    android:textColor="@color/gris"
                    android:textSize="13sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/IVRecicladorSeleccionRS"
                android:layout_width="20dp"
                android:layout_height="20dp"

                android:background="@drawable/no_seleccionado" />

        </LinearLayout>
    </FrameLayout>

    <Button
        android:id="@+id/BtnConfirmarRS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/Confirmar"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textAllCaps="false"

        android:background="@drawable/green_button_background"

        android:layout_marginTop="30dp"

        app:layout_constraintTop_toBottomOf="@id/FLReciladorRS"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>